--- a/index.css
+++ b/index.css
@@ -8,6 +8,50 @@ body {
     margin: 0;
 }
 
+#welcome-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    z-index: 10;
+  }
+  
+  #welcome-container h1 {
+    color: black;
+    font-size: 10rem;
+    margin-top: 1rem;
+  }
+  #logo{
+    margin-top: 100px;
+    width: 500px;
+    position: absolute;
+  }
+  
+  #welcome-container button {
+    z-index: 10;
+    position:absolute;
+    font-size: 2rem;
+    height:100px;
+    width: 200px;
+    bottom:100px;
+    right: 300px;
+    border: none;
+    background-color: #45a049;
+    color: white;
+    cursor: pointer;
+  }
+  
+  #game-container {
+    display: none;
+  }
+  
+
 #game-container {
     background-color: white;
     padding: 2rem;
@@ -24,7 +68,7 @@ body {
 h1 {
     margin-bottom: 1rem;
     position: absolute;
-    top: 60px;
+    top: 100px;
     color: rgba(0, 0, 0, 0.521);
 }
 
@@ -34,7 +78,7 @@ h1 {
     font-size: 200px;
     margin-top: -100px;
     background-color: white;
-    line-height: 160px;
+    line-height: 15rem;
 }
 
 #answer-input {
@@ -101,23 +145,23 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 20rem;
+    font-size: 30rem;
     color: red;
     z-index: 10;
-    background-color: rgba(0, 0, 0, 0.598);
+    background-color: rgba(0, 0, 0, 0.829);
 }
 
 
 #result-display {
     position: fixed;
     background-color: white;
-    padding: 1rem;
+    padding: 2rem;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     z-index: 11;
     display: none;
     font-size: 50px;
-    width: 83vw;
+    width: 80vw;
     top: 44px;
 
 }
